--- a/calc2.html
+++ b/calc2.html
@@ -32,6 +32,10 @@
             margin-right: 10px;
             font-size: 1.5rem;
         }
+        #num4{
+            height: 25px;
+            width: 80px;
+        }
 
     </style>
     <script>
@@ -41,15 +45,19 @@
             var ans = parseFloat(a) + parseFloat(b);
             document.getElementById("num3").value = ans;
         }
+        function clear() {
+            
+        }
     </script>
 </head>
 <body>
     <form>
-        <h1>Multiply</h1>
+        <h1>ADD</h1>
         <input type="number" id="num" />
         <input type="number" id="num2" />
         <input type="button" id="num1" value="Calculate" onclick="buttonClicked()" /><br />
         <input type="text" id="num3" />
+        <input type="button" id="num4" value="Clear" onclick="clear()" />
     </form>
 </body>
 </html>
